Update environment configs and add manipulation test scripts

--- a/conda_envs/environment_eb-man.yaml
+++ b/conda_envs/environment_eb-man.yaml
@@ -230,7 +230,7 @@ dependencies:
       - omegaconf==2.3.0
       - open3d==0.18.0
       - openai==1.58.1
-      - outlines==0.0.46
+      - outlines==0.0.34
       - pandas==2.2.3
       - peft==0.11.1
       - pillow==11.0.0
@@ -239,7 +239,7 @@ dependencies:
       - proto-plus==1.25.0
       - protobuf==5.29.2
       - py-cpuinfo==9.0.0
-      - pyairports==2.1.1
+      - airportsdata==20241001
       - pyarrow==18.1.0
       - pyasn1==0.6.1
       - pyasn1-modules==0.4.1
