--- a/conda_envs/lmdeploy.yaml
+++ b/conda_envs/lmdeploy.yaml
@@ -142,7 +142,7 @@ dependencies:
       - nvidia-nvjitlink-cu12==12.6.20
       - nvidia-nvtx-cu12==12.1.105
       - openai==1.42.0
-      - outlines==0.0.46
+      - outlines==0.0.34 # 수정
       - overrides==7.7.0
       - packaging==24.1
       - pandas==2.0.3
@@ -160,7 +160,7 @@ dependencies:
       - psutil==6.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
-      - pyairports==2.1.1
+      - airportsdata==20241001 # 수정
       - pyarrow==17.0.0
       - pycountry==24.6.1
       - pycparser==2.22
